# SQSE-AEAD

./: HSM_README.md  Info_extended.md  README.md  app_streamlit.py  app_streamlit_aead.py  apply_patch.ps1  cost_estimate.md  keygen.py  out.aead  project-whitepaper.md  pyproject.toml  rotate_keys_and_reencrypt.py  sqse_aead.py  sqse_demo.py  sqse_files.py  test.txt  validate_header.py
docs/: diagram.md  project-whitepaper.html
sqse_aead_pkg/: __init__.py  cli.py  core.py
